# specguard-chem

./: .gitignore  .pre-commit-config.yaml  ADVERSARIAL_REVIEW.md  AGENTS.MD  BENCHMARK_CARD.md  CONTRIBUTING.md  Dockerfile  METHODS.md  METRICS.md  Makefile  README.md  RESULTS_AUDIT_MEMO_sgchem_v0.1.md  RESULTS_AUDIT_MEMO_sgchem_v0.2.md  RESULTS_AUDIT_MEMO_sgchem_v0.3.md  SAFETY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  validate-submission.yml
baselines/: external_baselines.yaml  paper_baselines.yaml
data/specs/: schema.json  spec_antiarrhythmic_safe.yaml  spec_biosimilar_compliant.yaml  spec_cardiotoxicity.yaml  spec_ckd_compatible.yaml  spec_cns_bioavailability.yaml  spec_combination_rational.yaml  spec_comprehensive_safety.yaml  spec_controlled_avoidance.yaml  spec_cyp2c9_safe.yaml  spec_cyp2d6_mild.yaml  spec_cyp3a4_neutral.yaml  spec_drug_interactions.yaml  spec_generic_viable.yaml  spec_genotoxicity_clean.yaml  spec_geriatric_depression.yaml  spec_geriatric_friendly.yaml  spec_geriatric_safe.yaml  spec_gi_safety.yaml  spec_glucose_dependent.yaml  spec_hepatic_impairment_safe.yaml  spec_hepatotoxicity.yaml  spec_immunosuppressant_safe.yaml  spec_movement_disorders.yaml  spec_nephrotoxicity.yaml  spec_neurotoxicity.yaml  spec_orphan_designation.yaml  spec_otc_monograph.yaml  (+26 more)
docs/: adapters.md  overview.md
leaderboard/: README.md  index.html  vercel.json
paper/: metrics_summary.md
scripts/: make_paper_figures.py  update_leaderboard.py  validate_submission.py
tasks/: schema.json
tests/: test_adapters.py  test_benchmark_release.py  test_benchmark_sweep_paper.py  test_calibration.py  test_cli_baselines.py  test_dataset_generation.py  test_effective_spec.py  test_metrics.py  test_openai_adapter.py  test_process_adapter.py  test_protocols.py  test_reports.py  test_runner_cache_replay.py  test_runner_protocols.py  test_runner_smoke.py  test_schemas.py  test_verifiers.py
website/: index.html  methodology.html
(+98 files in other folders)
